--- a/APITest/APITest.csproj
+++ b/APITest/APITest.csproj
@@ -174,6 +174,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\brand.cs">
       <DependentUpon>TestAPIModel1.tt</DependentUpon>
     </Compile>
